# VecGrep

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
src/vecgrep/: chunker.py  embedder.py  migrate.py  server.py  store.py
tests/: conftest.py  test_chunker.py  test_chunker_ast.py  test_embedder.py  test_server.py  test_store.py
